[taotao-cloud-project-1477] update [taotao-cloud-goods]